# zephyr-synth

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  README_technical_background.rst  TODO.md  TODO.rst  prj.conf
boards/: frdm_mcxe247.conf  frdm_mcxe247.overlay  frdm_mcxe247.rst  frdm_mcxn947_mcxn947_cpu0.overlay
scripts/: gen_luts.py
src/: adsr.c  adsr.h  audio.c  audio.h  main.c  midi_handler.c  midi_handler.h  synth_engine.c  synth_engine.h  synth_state.h  waveform_selector.c  waveform_selector.h
